--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/eu.jpeg"
+              src="./assets/profilepic.jpeg"
               alt="Profile Image"
               width="450"
               height="350"
