--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Juliano Giotti | Game Developer" />
 
     <!-- Add a your png Logo to the assets folder and change the href attr accordingly  -->
-    <link rel="icon" type="image/png" href="./assets/devfolio-logo.png" />
+    <link rel="icon" type="image/png" href="./assets/GamePadIcon.png" />
 
     <!-- Add your primary-theme color for the value of content -->
     <meta name="theme-color" content="#434343" />
@@ -90,12 +90,12 @@
     <div id="hero">
       <section class="container">
         <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Juliano Giotti</span>
+          Olá! Meu nome é <span class="text-color-main name">Juliano Giotti</span>
           <br />
-          I'm a Game Developer.
+          Eu sou um Game Developer.
         </h1>
         <p class="hero-cta">
-          <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Veja mais</a>
         </p>
       </section>
       <a href="#about" class="scroll-down-link" aria-label="scroll-down">
@@ -107,12 +107,12 @@
     <!-- About Section -->
     <section id="about">
       <div class="container">
-        <h2 class="section-title">About Me</h2>
+        <h2 class="section-title">Sobre mim</h2>
         <div class="row about-wrapper">
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profilepic.jpeg"
+              src="./assets/profilepic.jpg"
               alt="Profile Image"
               width="450"
               height="350"
@@ -128,7 +128,9 @@
               Teu pai de calcinha?
             </p>
             <span class="about-wrapper__cta">
-              <a href="https://drive.google.com/file/d/1pHKaAvMgo3VmFFLwDuH01xQidqkJNe22/view?usp=drive_link" target="_blank" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="https://drive.google.com/file/d/1pHKaAvMgo3VmFFLwDuH01xQidqkJNe22/view?usp=drive_link" target="_blank" class="cta-btn cta-btn--resume">
+                Ver Currículo
+              </a>
             </span>
           </div>
         </div>
@@ -268,10 +270,12 @@
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
-        <h2 class="section-title">Contact</h2>
+        <h2 class="section-title">Contato</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a href="#" class="cta-btn cta-btn--resume">Call to Action</a>
+          <p class="contact-wrapper__text">Aberto a novas oportunidades. <br> Me chama para conversarmos:</p>
+          <a href="mailto:juli-giotti@hotmail.com" class="cta-btn cta-btn--resume">
+            Enviar Email
+          </a>
         </div>
       </div>
     </section>
@@ -285,15 +289,7 @@
         </a>
         <div class="social-links">
           <a
-            href="#!"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="twitter"
-          >
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a
-            href="#!"
+            href="https://www.instagram.com/ju_gtt/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="instagram"
@@ -301,15 +297,15 @@
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
-            href="#!"
+            href="https://wa.me/5554996023257?text=Olá!%20Gostaria%20de%20conversar%20com%20você%20sobre%20seu%20Portfólio/Currículo."
             target="_blank"
             rel="noopener noreferrer"
-            aria-label="codepen"
+            aria-label="whatsapp"
           >
-            <i class="fa-brands fa-codepen"></i>
+            <i class="fa-brands fa-whatsapp"></i>
           </a>
           <a
-            href="#!"
+            href="https://www.linkedin.com/in/juliano-giotti/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="linkedin"
@@ -317,7 +313,7 @@
             <i class="fa-brands fa-linkedin"></i>
           </a>
           <a
-            href="#!"
+            href="https://github.com/JuGtt"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="github"
