--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta property="og:title" content="Juliano Giotti | Game Developer" />
   <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
   <meta property="og:description" content="Made using DevFolio Template" />
-  <!-- Add a thumbnail image in assets folder and fill the content attr with URL to that thumbnail 
+  <!-- Add a thumbnail image in assets folder and fill the content attr with URL to that thumbnail
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
   <meta property="og:image" content="https://devfolio.js.org/assets/devfolio.png" />
 
@@ -101,15 +101,25 @@
             />
           </div> -->
         <div class="about-wrapper__info">
-          <p class="about-wrapper__info-text">
+          <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
             Me chamo Juliano, tenho 24 anos e sou formado em Jogos Digitais pela Universidade de Caxias do Sul. Sou
             apaixonado por Jogos, Música e Tecnologia.
           </p>
+          <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
+            Sou comunicativo e costumo me relacionar positivamente com meus colegas de trabalho.
+            Além disso, prezo muito pela organização e enxergo minhas responsabilidades laborais como
+            uma das partes mais importantes da minha carreira.
+          </p>
+            
+          <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
+            Busco sempre dedicar-me nas tarefas às quais sou designado ou que me proponho a fazer,
+            e compreendo que, mesmo assim, problemas acontecem - por isso, tento ser resiliente e
+            trabalhar na minha habilidade de resolução de problemas sempre que possível.
+          </p>
+          
           <p class="about-wrapper__info-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-            necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-            sint saepe nostrum! Enim, perferendis.
+            Estou em constante aprendizado e considero experiências de trabalho como sendo
+            extremamente valiosas para o meu crescimento pessoal e profissional.           
           </p>
           <span class="about-wrapper__cta" style="display: flex; justify-content: center;">
             <a href="https://drive.google.com/file/d/1pHKaAvMgo3VmFFLwDuH01xQidqkJNe22/view?usp=drive_link"
@@ -127,8 +137,14 @@
   <section id="projects">
     <div class="container">
       <div class="project-wrapper">
-        <h2 class="section-title dark-blue-text">Principais Projetos</h2>
-
+        <h2 class="section-title dark-blue-text">Alguns Projetos</h2>
+          <div class="project-wrapper__text" style="display: flex; justify-content: center; padding-bottom: 40px;">
+            <p class="project-wrapper__text-info" style="text-align: center; font-weight: bold;">
+              Apesar de minha formação ser em Jogos Digitais, venho realizando com o passar dos anos
+              diversos outros projetos em áreas não (tão) relacionadas; porém, busco uma oportunidade
+              para começar minha carreira naquilo que realmente amo - jogos. 
+            </p>
+          </div>
         <!-- Each .row is a project -->
         <article class="row">
           <div class="project-wrapper__text">
@@ -193,7 +209,7 @@
             <p class="project-wrapper__text-info">
               Esse projeto se resume num aplicativo usado pela Moura para o auxílio
               na etapa de montagem de baterias, usando Realidade Aumentada para renderizar
-              a bateria em questão no seu tamanho real pela tela do seu celular com todos os passos para sua montagem.
+              a bateria em seu tamanho real pela tela do seu celular com todos os passos para sua montagem.
             </p>
             <p>
               Trabalhei na parte de reconhecimento das baterias usando o Vuforia SDK,
@@ -209,14 +225,30 @@
             <div class="thumbnail rounded">
               <img src="./assets/mourapic2.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
             </div>
-            <div style="padding: 20px;">
+            <!-- <div style="padding: 20px;">
             </div>
             <div class="thumbnail rounded">
               <img src="./assets/mourapic1.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
-            </div>
+            </div> -->
           </div>
         </article>
         <!-- /END Project -->
+        <article class="row">
+          <div class="project-wrapper__text">
+            <h3 class="project-wrapper__text-title">Outras experiências</h3>
+            <p class="project-wrapper__text-info">
+              Ao longo da minha carreira tive a oportunidade de trabalhar com inúmeras empresas de grande renome.
+              Nelas, realizei vários projetos de Realidade Virtual com foco na área de segurança do trabalho e
+              treinamento de novos colaboradores.
+            </p>
+          </div>
+          <div class="project-wrapper__image" style="pointer-events: none;">
+            <div class="thumbnail rounded" style="box-shadow: none;">
+              <img src="./assets/Logos.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+            </div>
+          </div>
+        </article>
+
       </div>
     </div>
   </section>
@@ -231,6 +263,7 @@
         <a href="mailto:juli-giotti@hotmail.com" class="cta-btn cta-btn--resume">
           Enviar Email
         </a>
+        <p class="contact-wrapper__text" style="margin-top: 20px; font-size: 1.8rem;">juli-giotti@hotmail.com</p>
       </div>
     </div>
   </section>
