--- a/index.html
+++ b/index.html
@@ -12,33 +12,22 @@
   <meta name="keywords" content="JuGtt, Juliano Giotti, Unity" />
   <meta name="description" content="Juliano Giotti | Game Developer" />
 
-  <!-- Add a your png Logo to the assets folder and change the href attr accordingly  -->
   <link rel="icon" type="image/png" href="./assets/GamePadIcon.png" />
 
-  <!-- Add your primary-theme color for the value of content -->
   <meta name="theme-color" content="#434343" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <!-- Fill content with the URL of this portfolio you'll host -->
-  <meta property="og:url" content="https://devfolio.js.org/" />
-  <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
+  <meta property="og:url" content="https://jugtt.github.io/Portfolio/" />
   <meta property="og:title" content="Juliano Giotti | Game Developer" />
-  <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
-  <meta property="og:description" content="Made using DevFolio Template" />
-  <!-- Add a thumbnail image in assets folder and fill the content attr with URL to that thumbnail
-      so that a thumbnail image of your portfolio is shown while shared on other platform -->
-  <meta property="og:image" content="https://devfolio.js.org/assets/devfolio.png" />
+  <meta property="og:description" content="Juliano Giotti Portfolio" />
+  <meta property="og:image" content="./assets/preview.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <!-- Again fill content attr with the URL of this portfolio you'll host -->
-  <meta property="twitter:url" content="https://devfolio.js.org" />
-  <!-- Recommended to use the same text used within <title> element -->
-  <meta property="twitter:title" content="[Your name here] | Developer" />
-  <!-- short description that shows up while your portfolio is shared -->
-  <meta property="twitter:description" content="Made using DevFolio Template" />
-  <!-- Fill content with the URL to the thumbnail image that you'll put in the assets folder -->
+  <meta property="twitter:url" content="https://jugtt.github.io/Portfolio/" />
+  <meta property="twitter:title" content="Juliano Giotti | Game Developer" />
+  <meta property="twitter:description" content="Juliano Giotti Portfolio" />
   <meta property="twitter:image" content="https://anilseervi.vercel.app/assets/devfolio.png" />
 
   <!-- link tags -->
@@ -52,19 +41,6 @@
   <script defer src="./javascript/scrollreveal.min.js"></script>
   <script defer type="text/javascript" src="./javascript/scrollveal.js"></script>
 
-  <!-- Remove Google Analytics once you have your portfolio website set-up -->
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122228201-4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || []
-    function gtag() {
-      dataLayer.push(arguments)
-    }
-    gtag("js", new Date())
-
-    gtag("config", "UA-122228201-4")
-  </script>
-  <!-- End of Google Analytics -->
 </head>
 
 <body>
@@ -145,7 +121,7 @@
               para começar minha carreira naquilo que realmente amo - jogos. 
             </p>
           </div>
-        <!-- Each .row is a project -->
+
         <article class="row">
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">The Pirate Exorcist</h3>
@@ -171,9 +147,9 @@
             </a>
           </div>
         </article>
-        <!-- /END Project -->
 
-        <!-- Each .row is a project -->
+
+
         <article class="row">
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Configurador Marcopolo</h3>
@@ -195,14 +171,14 @@
           <div class="project-wrapper__image">
             <a href="#" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail rounded">
-                <img src="./assets/project.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+                <img src="./assets/marcopolopic1.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
               </div>
             </a>
           </div>
         </article>
-        <!-- /END Project -->
 
-        <!-- Each .row is a project -->
+
+
         <article class="row">
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Baterias Moura</h3>
@@ -232,7 +208,7 @@
             </div> -->
           </div>
         </article>
-        <!-- /END Project -->
+
         <article class="row">
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Outras experiências</h3>
@@ -252,7 +228,7 @@
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
+
 
   <!-- Contact Section -->
   <section id="contact">
