Hyperlink Preview Changed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:url" content="https://jugtt.github.io/Portfolio/" />
   <meta property="og:title" content="Juliano Giotti | Game Developer" />
   <meta property="og:description" content="Juliano Giotti Portfolio" />
-  <meta property="og:image" content="./assets/preview.png" />
+  <meta property="og:image" content="https://ibb.co/tXrCcZK" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
