--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta property="twitter:url" content="https://jugtt.github.io/Portfolio/" />
   <meta property="twitter:title" content="Juliano Giotti | Game Developer" />
   <meta property="twitter:description" content="Juliano Giotti Portfolio" />
-  <meta property="twitter:image" content="https://anilseervi.vercel.app/assets/devfolio.png" />
+  <meta property="twitter:image" content="https://ibb.co/tXrCcZK" />
 
   <!-- link tags -->
   <link rel="preload" as="style" href="./css/main.css" />
@@ -169,11 +169,9 @@
           </div>
 
           <div class="project-wrapper__image">
-            <a href="#" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail rounded">
                 <img src="./assets/marcopolopic1.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
               </div>
-            </a>
           </div>
         </article>
 
