--- a/index.html
+++ b/index.html
@@ -13,22 +13,21 @@
   <meta name="description" content="Juliano Giotti | Game Developer" />
 
   <link rel="icon" type="image/png" href="./assets/GamePadIcon.png" />
-
+ 
   <meta name="theme-color" content="#434343" />
 
-  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jugtt.github.io/Portfolio/" />
   <meta property="og:title" content="Juliano Giotti | Game Developer" />
   <meta property="og:description" content="Juliano Giotti Portfolio" />
-  <meta property="og:image" content="https://ibb.co/tXrCcZK" />
+  <meta property="og:image" content="https://jugtt.github.io/Portfolio/assets/preview.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://jugtt.github.io/Portfolio/" />
   <meta property="twitter:title" content="Juliano Giotti | Game Developer" />
   <meta property="twitter:description" content="Juliano Giotti Portfolio" />
-  <meta property="twitter:image" content="https://ibb.co/tXrCcZK" />
+  <meta property="twitter:image" content="https://jugtt.github.io/Portfolio/assets/preview.png" />
 
   <!-- link tags -->
   <link rel="preload" as="style" href="./css/main.css" />
@@ -280,3 +279,9 @@
 </body>
 
 </html>
+
+<style>
+  .a{
+    content: url("./assets/preview.png");
+}
+</style>
