Adicionado Projeto Caster

--- a/index.html
+++ b/index.html
@@ -147,7 +147,30 @@
           </div>
         </article>
 
+        <article class="row">
+          <div class="project-wrapper__text">
+            <h3 class="project-wrapper__text-title">Treinamento Castertech</h3>
+            <p class="project-wrapper__text-info">
+              Este projeto foi criado em Realidade Virtual com o intuito de servir como treinamento para novos colaboradores
+              sem os colocar em risco.
+            </p>
+            <p>
+              Conta com perguntas, situações que podem ocorrer no ambiente de trabalho
+              e também informações sobre equipamentos de proteção.
+            </p>
+            <div class="project-wrapper__text-btns">
+              <!-- <a href="#" target="_blank" rel="noopener noreferrer" class="cta-btn cta-btn--hero cta-btn--projects">See
+                Live</a> -->
+              <!-- <a href="#" target="_blank" class="cta-btn text-color-main">Source Code</a> -->
+            </div>
+          </div>
 
+          <div class="project-wrapper__image">
+              <div class="thumbnail rounded">
+                <img src="./assets/castertechpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+              </div>
+          </div>
+        </article>
 
         <article class="row">
           <div class="project-wrapper__text">
@@ -173,8 +196,6 @@
               </div>
           </div>
         </article>
-
-
 
         <article class="row">
           <div class="project-wrapper__text">
@@ -225,7 +246,6 @@
       </div>
     </div>
   </section>
-
 
   <!-- Contact Section -->
   <section id="contact">
