Added english version

--- a/indexen.html
+++ b/indexen.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Juliano Giotti | Game Developer" />
 
   <link rel="icon" type="image/png" href="./assets/GamePadIcon.png" />
- 
+
   <meta name="theme-color" content="#434343" />
 
   <meta property="og:type" content="website" />
@@ -47,12 +47,12 @@
   <div id="hero">
     <section class="container">
       <h1 class="hero-title">
-        Olá! Meu nome é <span class="text-color-main name">Juliano Giotti</span>
+        Hi! My name is <span class="text-color-main name">Juliano Giotti</span>
         <br />
-        Eu sou um Game Developer.
+        I'm a Game Developer.
       </h1>
       <p class="hero-cta">
-        <a class="cta-btn cta-btn--hero" href="indexen.html">English?</a>
+        <a class="cta-btn cta-btn--hero" href="index.html">Back to Portuguese</a>
       </p>
     </section>
     <a href="#about" class="scroll-down-link" aria-label="scroll-down">
@@ -64,7 +64,7 @@
   <!-- About Section -->
   <section id="about">
     <div class="container">
-      <h2 class="section-title">Sobre mim</h2>
+      <h2 class="section-title">About me</h2>
       <div class="row about-wrapper" style="display: flex; justify-content: center;">
         <!-- <div class="about-wrapper__image">
             <img
@@ -77,29 +77,26 @@
           </div> -->
         <div class="about-wrapper__info">
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
-            Me chamo Juliano, tenho 24 anos e sou formado em Jogos Digitais pela Universidade de Caxias do Sul. Sou
-            apaixonado por Jogos, Música e Tecnologia.
+            My name is Juliano, I'm 24 years old, and I have a degree in Digital Games from the University of Caxias do Sul.
+            I'm passionate about Games, Music, and Technology.
           </p>
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
-            Sou comunicativo e costumo me relacionar positivamente com meus colegas de trabalho.
-            Além disso, prezo muito pela organização e enxergo minhas responsabilidades laborais como
-            uma das partes mais importantes da minha carreira.
+            I'm communicative and I usually have positive relationships with my colleagues.
+            Additionally, I highly value organization and see my work responsibilities as one of the most important aspects of my career.
           </p>
-            
+
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
-            Busco sempre dedicar-me nas tarefas às quais sou designado ou que me proponho a fazer,
-            e compreendo que, mesmo assim, problemas acontecem - por isso, tento ser resiliente e
-            trabalhar na minha habilidade de resolução de problemas sempre que possível.
+            I always strive to dedicate myself to the tasks I'm assigned or propose to do, and I understand that, nevertheless,
+            problems may arise - that's why I try to be resilient and work on my problem-solving skills whenever possible.
           </p>
-          
+
           <p class="about-wrapper__info-text">
-            Estou em constante aprendizado e considero experiências de trabalho como sendo
-            extremamente valiosas para o meu crescimento pessoal e profissional.           
+            I'm constantly learning and I consider work experiences to be extremely valuable for my personal and professional growth.
           </p>
           <span class="about-wrapper__cta" style="display: flex; justify-content: center;">
-            <a href="https://drive.google.com/file/d/1pHKaAvMgo3VmFFLwDuH01xQidqkJNe22/view?usp=drive_link"
+            <a href="https://drive.google.com/file/d/1BT1aJMOkspCmvHPEBCkgPI6r_cZo-i8i/view?usp=drive_link"
               target="_blank" class="cta-btn cta-btn--resume">
-              Ver Currículo
+              See Resume
             </a>
           </span>
         </div>
@@ -112,12 +109,11 @@
   <section id="projects">
     <div class="container">
       <div class="project-wrapper">
-        <h2 class="section-title dark-blue-text">Alguns Projetos</h2>
+        <h2 class="section-title dark-blue-text">Some Projects</h2>
           <div class="project-wrapper__text" style="display: flex; justify-content: center; padding-bottom: 40px;">
             <p class="project-wrapper__text-info" style="text-align: center; font-weight: bold;">
-              Apesar de minha formação ser em Jogos Digitais, venho realizando com o passar dos anos
-              diversos outros projetos em áreas não (tão) relacionadas; porém, busco uma oportunidade
-              para começar minha carreira naquilo que realmente amo - jogos. 
+              Despite my background in Digital Games, over the years I have undertaken various projects in areas that are not (so) related;
+              however, I am seeking an opportunity to begin my career in what I truly love - games.
             </p>
           </div>
 
@@ -125,13 +121,13 @@
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">The Pirate Exorcist</h3>
             <p class="project-wrapper__text-info">
-              Esse projeto foi meu TCC para o curso de Jogos Digitais.
-              É sobre um pirata que explora oceanos e navios abandonados com o objetivo de exorcizá-los.
-              O jogo conta com navios gerados proceduralmente e um algoritmo A* para o pathfinding.
+              This project was my final project for the Digital Games course.
+              It's about a pirate who explores oceans and abandoned ships with the aim of exorcising them.
+              The game features procedurally generated ships and an A* algorithm for pathfinding.
             </p>
             <div class="project-wrapper__text-btns">
               <a href="https://plaxz.itch.io/the-pirate-exorcist" target="_blank" rel="noopener noreferrer"
-                class="cta-btn cta-btn--hero cta-btn--projects">&nbsp;Ver</a>
+                class="cta-btn cta-btn--hero cta-btn--projects">&nbsp;See</a>
               <!-- <a href="#" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 > -->
@@ -151,9 +147,9 @@
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Robot Runner</h3>
             <p class="project-wrapper__text-info">
-              "Robot Runner" é um Infinity Runner para dispositivos móveis,
-              situado em um ambiente sci-fi. Os jogadores assumem o controle de um robô enquanto correm sem parar,
-              enfrentando obstáculos e eliminando inimigos.
+
+              "Robot Runner" is an Infinity Runner for mobile devices, set in a sci-fi environment.
+              Players take control of a robot as they run endlessly, facing obstacles and eliminating enemies.
             </p>
           </div>
 
@@ -166,14 +162,12 @@
 
         <article class="row">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Treinamento Castertech</h3>
+            <h3 class="project-wrapper__text-title">Castertech Training</h3>
             <p class="project-wrapper__text-info">
-              Este projeto foi criado em Realidade Virtual com o intuito de servir como treinamento para novos colaboradores
-              sem os colocar em risco.
+              This project was created in Virtual Reality with the purpose of serving as training for new employees without putting them at risk.
             </p>
             <p>
-              Conta com perguntas, situações que podem ocorrer no ambiente de trabalho
-              e também informações sobre equipamentos de proteção.
+              It includes questions and situations that may occur in the workplace as well as information about protective equipment.
             </p>
             <div class="project-wrapper__text-btns">
               <!-- <a href="#" target="_blank" rel="noopener noreferrer" class="cta-btn cta-btn--hero cta-btn--projects">See
@@ -191,14 +185,12 @@
 
         <article class="row">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Configurador Marcopolo</h3>
+            <h3 class="project-wrapper__text-title">Marcopolo Configurator</h3>
             <p class="project-wrapper__text-info">
-              Esse projeto é um configurador de interior de ônibus usado pela Marcopolo
-              tendo como fim a prototipagem da etapa de fabricação.
+              This project is an interior bus configurator used by Marcopolo, aimed at prototyping the manufacturing stage.
             </p>
             <p>
-              Fiquei encarregado de fazer todo o sistema de seleção de poltronas,
-              seleção de materiais e UI.
+              I was responsible for implementing the entire seat selection system, material selection, and UI.
             </p>
             <div class="project-wrapper__text-btns">
               <!-- <a href="#" target="_blank" rel="noopener noreferrer" class="cta-btn cta-btn--hero cta-btn--projects">See
@@ -216,15 +208,13 @@
 
         <article class="row">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Baterias Moura</h3>
+            <h3 class="project-wrapper__text-title">Moura Batteries</h3>
             <p class="project-wrapper__text-info">
-              Esse projeto se resume num aplicativo usado pela Moura para o auxílio
-              na etapa de montagem de baterias, usando Realidade Aumentada para renderizar
-              a bateria em seu tamanho real pela tela do seu celular com todos os passos para sua montagem.
+              This project consists of an application used by Moura to assist in the assembly stage of batteries,
+              using Augmented Reality to render the battery in its actual size on your phone screen with all the steps for assembly.
             </p>
             <p>
-              Trabalhei na parte de reconhecimento das baterias usando o Vuforia SDK,
-              todo o sistema de seleção de baterias e UI do aplicativo.
+              I worked on the battery recognition part using the Vuforia SDK, as well as the entire battery selection system and UI of the application.
             </p>
             <!-- <div class="project-wrapper__text-btns">
               <a href="#" target="_blank" rel="noopener noreferrer" class="cta-btn cta-btn--hero cta-btn--projects">See
@@ -246,11 +236,10 @@
 
         <article class="row">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Outras experiências</h3>
+            <h3 class="project-wrapper__text-title">Other experiences</h3>
             <p class="project-wrapper__text-info">
-              Ao longo da minha carreira tive a oportunidade de trabalhar com inúmeras empresas de grande renome.
-              Nelas, realizei vários projetos de Realidade Virtual com foco na área de segurança do trabalho e
-              treinamento de novos colaboradores.
+              Throughout my career, I've had the opportunity to work with numerous renowned companies.
+              Within them, I've carried out several Virtual Reality projects focused on workplace safety and training for new employees.
             </p>
           </div>
           <div class="project-wrapper__image" style="pointer-events: none;">
@@ -267,11 +256,11 @@
   <!-- Contact Section -->
   <section id="contact">
     <div class="container">
-      <h2 class="section-title">Contato</h2>
+      <h2 class="section-title">Contact</h2>
       <div class="contact-wrapper">
-        <p class="contact-wrapper__text">Aberto a novas oportunidades. <br> Me chama para conversarmos:</p>
+        <p class="contact-wrapper__text">Open to new opportunities. <br> Feel free to reach out for a chat:</p>
         <a href="mailto:juli-giotti@hotmail.com" class="cta-btn cta-btn--resume">
-          Enviar Email
+          Send Email
         </a>
         <p class="contact-wrapper__text" style="margin-top: 20px; font-size: 1.8rem;">juli-giotti@hotmail.com</p>
       </div>
@@ -286,7 +275,7 @@
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
       <div class="social-links">
-        <a href="https://wa.me/5554996023257?text=Olá!%20Gostaria%20de%20conversar%20com%20você%20sobre%20seu%20Portfólio/Currículo."
+        <a href="https://wa.me/5554996023257?text=Hello!%20I%20would%20like%20to%20chat%20with%20you%20about%20your%20Portfolio/Resume."
           target="_blank" rel="noopener noreferrer" aria-label="whatsapp">
           <i class="fa-brands fa-whatsapp"></i>
         </a>
