Deleted Useless files / Changed About me section

--- a/indexen.html
+++ b/indexen.html
@@ -77,11 +77,11 @@
           </div> -->
         <div class="about-wrapper__info">
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
-            My name is Juliano, I'm 24 years old, and I have a degree in Digital Games from the University of Caxias do Sul.
-            I'm passionate about Games, Music, and Technology.
+            Nice to meet you! My name is Juliano, a 24 year-old passionate about Games, Music and Technology.
+            I have a degree in Digital Games from the University of Caxias do Sul.
           </p>
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
-            I'm communicative and I usually have positive relationships with my colleagues.
+            Being naturally communicative, I easily build good relationships with my colleagues.
             Additionally, I highly value organization and see my work responsibilities as one of the most important aspects of my career.
           </p>
 
