Changed About me

--- a/indexen.html
+++ b/indexen.html
@@ -77,7 +77,7 @@
           </div> -->
         <div class="about-wrapper__info">
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
-            Nice to meet you! My name is Juliano, a 24 year-old passionate about Games, Music and Technology.
+            Nice to meet you! I'm Juliano, a 24 year-old passionate about Games, Music and Technology.
             I have a degree in Digital Games from the University of Caxias do Sul.
           </p>
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
