Added Physiotherapy project

--- a/index.html
+++ b/index.html
@@ -166,6 +166,31 @@
 
         <article class="row">
           <div class="project-wrapper__text">
+            <h3 class="project-wrapper__text-title">Fisioterapia com RV</h3>
+            <p class="project-wrapper__text-info">
+              Esse foi um projeto feito para o Hospital do Círculo para o tratamento de pacientes de Fisioterapia,
+              que alcançou resultados até três vezes melhores do que com métodos normais. Foi um dos projetos mais
+              interessantes e únicos que já participei.
+            </p>
+            <div class="project-wrapper__text-btns">
+              <a href="https://medicinasa.com.br/hospital-circulo-rv/" target="_blank" rel="noopener noreferrer"
+                class="cta-btn cta-btn--hero cta-btn--projects">
+                Ver Matéria
+              </a>
+            </div>
+          </div>
+
+          <div class="project-wrapper__image">
+            <a href="https://medicinasa.com.br/hospital-circulo-rv/" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail rounded">
+                <img src="./assets/fisioterapiapic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+              </div>
+            </a>
+          </div>
+        </article>
+
+        <article class="row">
+          <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Treinamento Castertech</h3>
             <p class="project-wrapper__text-info">
               Este projeto foi criado em Realidade Virtual com o intuito de servir como treinamento para novos colaboradores
