--- a/indexen.html
+++ b/indexen.html
@@ -162,6 +162,31 @@
 
         <article class="row">
           <div class="project-wrapper__text">
+            <h3 class="project-wrapper__text-title">VR Physiotherapy</h3>
+            <p class="project-wrapper__text-info">
+              This was a project done for the Círculo Hospital for the treatment of Physiotherapy patients,
+              which achieved results up to three times better than with normal methods.
+              It was one of the most interesting and unique projects I've ever participated in.
+            </p>
+            <div class="project-wrapper__text-btns">
+              <a href="https://medicinasa.com.br/hospital-circulo-rv/" target="_blank" rel="noopener noreferrer"
+                class="cta-btn cta-btn--hero cta-btn--projects">
+                See Article (PT)
+              </a>
+            </div>
+          </div>
+
+          <div class="project-wrapper__image">
+            <a href="https://medicinasa.com.br/hospital-circulo-rv/" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail rounded">
+                <img src="./assets/fisioterapiapic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+              </div>
+            </a>
+          </div>
+        </article>
+
+        <article class="row">
+          <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Castertech Training</h3>
             <p class="project-wrapper__text-info">
               This project was created in Virtual Reality with the purpose of serving as training for new employees without putting them at risk.
