Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VKMZKSL84W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VKMZKSL84W');
+</script>
+
 <body>
   <!-- Hero Section -->
   <div id="hero">
@@ -97,7 +107,7 @@
             extremamente valiosas para o meu crescimento pessoal e profissional.           
           </p>
           <span class="about-wrapper__cta" style="display: flex; justify-content: center;">
-            <a href="https://drive.google.com/file/d/12lI-RRt26-RfYz4BJcK_ZtNyBQglGPex/view?usp=drive_link"
+            <a href="https://drive.google.com/file/d/1pHKaAvMgo3VmFFLwDuH01xQidqkJNe22/view?usp=drive_link"
               target="_blank" class="cta-btn cta-btn--resume">
               Ver Currículo
             </a>
