--- a/indexen.html
+++ b/indexen.html
@@ -42,6 +42,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VKMZKSL84W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VKMZKSL84W');
+</script>
+
 <body>
   <!-- Hero Section -->
   <div id="hero">
@@ -94,7 +104,7 @@
             I'm constantly learning and I consider work experiences to be extremely valuable for my personal and professional growth.
           </p>
           <span class="about-wrapper__cta" style="display: flex; justify-content: center;">
-            <a href="https://drive.google.com/file/d/1EExJdNnvBJD27IAatPVynspoWrywF4W_/view?usp=drive_link"
+            <a href="https://drive.google.com/file/d/1BT1aJMOkspCmvHPEBCkgPI6r_cZo-i8i/view?usp=drive_link"
               target="_blank" class="cta-btn cta-btn--resume">
               See Resume
             </a>
