Fixed Google Analytics

--- a/indexen.html
+++ b/indexen.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKMZKSL84W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VKMZKSL84W');
+  </script>
+
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,16 +52,6 @@
   <script defer type="text/javascript" src="./javascript/scrollveal.js"></script>
 
 </head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VKMZKSL84W"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VKMZKSL84W');
-</script>
 
 <body>
   <!-- Hero Section -->
@@ -92,16 +93,20 @@
           </p>
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
             Being naturally communicative, I easily build good relationships with my colleagues.
-            Additionally, I highly value organization and see my work responsibilities as one of the most important aspects of my career.
+            Additionally, I highly value organization and see my work responsibilities as one of the most important
+            aspects of my career.
           </p>
 
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
-            I always strive to dedicate myself to the tasks I'm assigned or propose to do, and I understand that, nevertheless,
-            problems may arise - that's why I try to be resilient and work on my problem-solving skills whenever possible.
+            I always strive to dedicate myself to the tasks I'm assigned or propose to do, and I understand that,
+            nevertheless,
+            problems may arise - that's why I try to be resilient and work on my problem-solving skills whenever
+            possible.
           </p>
 
           <p class="about-wrapper__info-text">
-            I'm constantly learning and I consider work experiences to be extremely valuable for my personal and professional growth.
+            I'm constantly learning and I consider work experiences to be extremely valuable for my personal and
+            professional growth.
           </p>
           <span class="about-wrapper__cta" style="display: flex; justify-content: center;">
             <a href="https://drive.google.com/file/d/1BT1aJMOkspCmvHPEBCkgPI6r_cZo-i8i/view?usp=drive_link"
@@ -120,12 +125,13 @@
     <div class="container">
       <div class="project-wrapper">
         <h2 class="section-title dark-blue-text">Some Projects</h2>
-          <div class="project-wrapper__text" style="display: flex; justify-content: center; padding-bottom: 40px;">
-            <p class="project-wrapper__text-info" style="text-align: center; font-weight: bold;">
-              Despite my background in Digital Games, over the years I have undertaken various projects in areas that are not (so) related;
-              however, I am seeking an opportunity to begin my career in what I truly love - games.
-            </p>
-          </div>
+        <div class="project-wrapper__text" style="display: flex; justify-content: center; padding-bottom: 40px;">
+          <p class="project-wrapper__text-info" style="text-align: center; font-weight: bold;">
+            Despite my background in Digital Games, over the years I have undertaken various projects in areas that are
+            not (so) related;
+            however, I am seeking an opportunity to begin my career in what I truly love - games.
+          </p>
+        </div>
 
         <article class="row">
           <div class="project-wrapper__text">
@@ -164,9 +170,9 @@
           </div>
 
           <div class="project-wrapper__image">
-              <div class="thumbnail rounded">
-                <img src="./assets/robot-runnerpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
-              </div>
+            <div class="thumbnail rounded">
+              <img src="./assets/robot-runnerpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+            </div>
           </div>
         </article>
 
@@ -189,7 +195,8 @@
           <div class="project-wrapper__image">
             <a href="https://medicinasa.com.br/hospital-circulo-rv/" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail rounded">
-                <img src="./assets/fisioterapiapic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+                <img src="./assets/fisioterapiapic.png" class="img-fluid" alt="Project Image" width="1366"
+                  height="767" />
               </div>
             </a>
           </div>
@@ -199,10 +206,12 @@
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Castertech Training</h3>
             <p class="project-wrapper__text-info">
-              This project was created in Virtual Reality with the purpose of serving as training for new employees without putting them at risk.
+              This project was created in Virtual Reality with the purpose of serving as training for new employees
+              without putting them at risk.
             </p>
             <p>
-              It includes questions and situations that may occur in the workplace as well as information about protective equipment.
+              It includes questions and situations that may occur in the workplace as well as information about
+              protective equipment.
             </p>
             <div class="project-wrapper__text-btns">
               <!-- <a href="#" target="_blank" rel="noopener noreferrer" class="cta-btn cta-btn--hero cta-btn--projects">See
@@ -212,9 +221,9 @@
           </div>
 
           <div class="project-wrapper__image">
-              <div class="thumbnail rounded">
-                <img src="./assets/castertechpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
-              </div>
+            <div class="thumbnail rounded">
+              <img src="./assets/castertechpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+            </div>
           </div>
         </article>
 
@@ -222,7 +231,8 @@
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Marcopolo Configurator</h3>
             <p class="project-wrapper__text-info">
-              This project is an interior bus configurator used by Marcopolo, aimed at prototyping the manufacturing stage.
+              This project is an interior bus configurator used by Marcopolo, aimed at prototyping the manufacturing
+              stage.
             </p>
             <p>
               I was responsible for implementing the entire seat selection system, material selection, and UI.
@@ -235,9 +245,9 @@
           </div>
 
           <div class="project-wrapper__image">
-              <div class="thumbnail rounded">
-                <img src="./assets/marcopolopic1.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
-              </div>
+            <div class="thumbnail rounded">
+              <img src="./assets/marcopolopic1.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+            </div>
           </div>
         </article>
 
@@ -246,10 +256,12 @@
             <h3 class="project-wrapper__text-title">Moura Batteries</h3>
             <p class="project-wrapper__text-info">
               This project consists of an application used by Moura to assist in the assembly stage of batteries,
-              using Augmented Reality to render the battery in its actual size on your phone screen with all the steps for assembly.
+              using Augmented Reality to render the battery in its actual size on your phone screen with all the steps
+              for assembly.
             </p>
             <p>
-              I worked on the battery recognition part using the Vuforia SDK, as well as the entire battery selection system and UI of the application.
+              I worked on the battery recognition part using the Vuforia SDK, as well as the entire battery selection
+              system and UI of the application.
             </p>
             <!-- <div class="project-wrapper__text-btns">
               <a href="#" target="_blank" rel="noopener noreferrer" class="cta-btn cta-btn--hero cta-btn--projects">See
@@ -274,7 +286,8 @@
             <h3 class="project-wrapper__text-title">Other experiences</h3>
             <p class="project-wrapper__text-info">
               Throughout my career, I've had the opportunity to work with numerous renowned companies.
-              Within them, I've carried out several Virtual Reality projects focused on workplace safety and training for new employees.
+              Within them, I've carried out several Virtual Reality projects focused on workplace safety and training
+              for new employees.
             </p>
           </div>
           <div class="project-wrapper__image" style="pointer-events: none;">
@@ -342,7 +355,7 @@
 </html>
 
 <style>
-  .a{
+  .a {
     content: url("./assets/preview.png");
-}
+  }
 </style>
