--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKMZKSL84W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VKMZKSL84W');
+  </script>
+
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +24,7 @@
   <meta name="description" content="Juliano Giotti | Game Developer" />
 
   <link rel="icon" type="image/png" href="./assets/GamePadIcon.png" />
- 
+
   <meta name="theme-color" content="#434343" />
 
   <meta property="og:type" content="website" />
@@ -41,16 +52,6 @@
   <script defer type="text/javascript" src="./javascript/scrollveal.js"></script>
 
 </head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VKMZKSL84W"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VKMZKSL84W');
-</script>
 
 <body>
   <!-- Hero Section -->
@@ -95,16 +96,16 @@
             Além disso, prezo muito pela organização e enxergo minhas responsabilidades laborais como
             uma das partes mais importantes da minha carreira.
           </p>
-            
+
           <p class="about-wrapper__info-text" style="padding-bottom: 10px;">
             Busco sempre dedicar-me nas tarefas às quais sou designado ou que me proponho a fazer,
             e compreendo que, mesmo assim, problemas acontecem - por isso, tento ser resiliente e
             trabalhar na minha habilidade de resolução de problemas sempre que possível.
           </p>
-          
+
           <p class="about-wrapper__info-text">
             Estou em constante aprendizado e considero experiências de trabalho como sendo
-            extremamente valiosas para o meu crescimento pessoal e profissional.           
+            extremamente valiosas para o meu crescimento pessoal e profissional.
           </p>
           <span class="about-wrapper__cta" style="display: flex; justify-content: center;">
             <a href="https://drive.google.com/file/d/1pHKaAvMgo3VmFFLwDuH01xQidqkJNe22/view?usp=drive_link"
@@ -123,13 +124,13 @@
     <div class="container">
       <div class="project-wrapper">
         <h2 class="section-title dark-blue-text">Alguns Projetos</h2>
-          <div class="project-wrapper__text" style="display: flex; justify-content: center; padding-bottom: 40px;">
-            <p class="project-wrapper__text-info" style="text-align: center; font-weight: bold;">
-              Apesar de minha formação ser em Jogos Digitais, venho realizando com o passar dos anos
-              diversos outros projetos em áreas não (tão) relacionadas; porém, busco uma oportunidade
-              para começar minha carreira naquilo que realmente amo - jogos. 
-            </p>
-          </div>
+        <div class="project-wrapper__text" style="display: flex; justify-content: center; padding-bottom: 40px;">
+          <p class="project-wrapper__text-info" style="text-align: center; font-weight: bold;">
+            Apesar de minha formação ser em Jogos Digitais, venho realizando com o passar dos anos
+            diversos outros projetos em áreas não (tão) relacionadas; porém, busco uma oportunidade
+            para começar minha carreira naquilo que realmente amo - jogos.
+          </p>
+        </div>
 
         <article class="row">
           <div class="project-wrapper__text">
@@ -168,9 +169,9 @@
           </div>
 
           <div class="project-wrapper__image">
-              <div class="thumbnail rounded">
-                <img src="./assets/robot-runnerpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
-              </div>
+            <div class="thumbnail rounded">
+              <img src="./assets/robot-runnerpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+            </div>
           </div>
         </article>
 
@@ -193,7 +194,8 @@
           <div class="project-wrapper__image">
             <a href="https://medicinasa.com.br/hospital-circulo-rv/" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail rounded">
-                <img src="./assets/fisioterapiapic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+                <img src="./assets/fisioterapiapic.png" class="img-fluid" alt="Project Image" width="1366"
+                  height="767" />
               </div>
             </a>
           </div>
@@ -203,7 +205,8 @@
           <div class="project-wrapper__text">
             <h3 class="project-wrapper__text-title">Treinamento Castertech</h3>
             <p class="project-wrapper__text-info">
-              Este projeto foi criado em Realidade Virtual com o intuito de servir como treinamento para novos colaboradores
+              Este projeto foi criado em Realidade Virtual com o intuito de servir como treinamento para novos
+              colaboradores
               sem os colocar em risco.
             </p>
             <p>
@@ -218,9 +221,9 @@
           </div>
 
           <div class="project-wrapper__image">
-              <div class="thumbnail rounded">
-                <img src="./assets/castertechpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
-              </div>
+            <div class="thumbnail rounded">
+              <img src="./assets/castertechpic.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+            </div>
           </div>
         </article>
 
@@ -243,9 +246,9 @@
           </div>
 
           <div class="project-wrapper__image">
-              <div class="thumbnail rounded">
-                <img src="./assets/marcopolopic1.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
-              </div>
+            <div class="thumbnail rounded">
+              <img src="./assets/marcopolopic1.png" class="img-fluid" alt="Project Image" width="1366" height="767" />
+            </div>
           </div>
         </article>
 
@@ -353,7 +356,7 @@
 </html>
 
 <style>
-  .a{
+  .a {
     content: url("./assets/preview.png");
-}
+  }
 </style>
