Changed Page Name for google analytics

--- a/indexen.html
+++ b/indexen.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
-  <title>Juliano Giotti | Game Developer</title>
+  <title>Juliano Giotti | Game Developer En</title>
   <meta name="keywords" content="JuGtt, Juliano Giotti, Unity" />
   <meta name="description" content="Juliano Giotti | Game Developer" />
 
