--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKMZKSL84W"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9XC1E5EEEX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-VKMZKSL84W');
+    gtag('config', 'G-9XC1E5EEEX');
   </script>
 
   <meta charset="UTF-8" />
